// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title d1 level renders correctly 1`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d1 level with custom margin renders correctly 1`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
  margin: 12px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d1 level with custom margin renders correctly 2`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
  margin: 12px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d1 level with custom margin renders correctly 3`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
  margin-top: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d1 level with custom margin renders correctly 4`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
  margin-top: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d1 level with custom margin renders correctly 5`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
  margin-right: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d1 level with custom margin renders correctly 6`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
  margin-right: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d1 level with custom margin renders correctly 7`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
  margin-bottom: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d1 level with custom margin renders correctly 8`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
  margin-bottom: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d1 level with custom margin renders correctly 9`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
  margin-left: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d1 level with custom margin renders correctly 10`] = `
.c0.c0.c0 {
  font-size: 64px;
  line-height: 1.25;
  font-weight: 600;
  margin-left: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title d2 level renders correctly 1`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title d2 level with custom margin renders correctly 1`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
  margin: 12px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title d2 level with custom margin renders correctly 2`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
  margin: 12px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title d2 level with custom margin renders correctly 3`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
  margin-top: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title d2 level with custom margin renders correctly 4`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
  margin-top: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title d2 level with custom margin renders correctly 5`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
  margin-right: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title d2 level with custom margin renders correctly 6`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
  margin-right: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title d2 level with custom margin renders correctly 7`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
  margin-bottom: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title d2 level with custom margin renders correctly 8`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
  margin-bottom: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title d2 level with custom margin renders correctly 9`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
  margin-left: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title d2 level with custom margin renders correctly 10`] = `
.c0.c0.c0 {
  font-size: 56px;
  font-weight: 400;
  line-height: 1.28;
  margin-left: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h1 level renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level with custom margin renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
  margin: 12px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level with custom margin renders correctly 2`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
  margin: 12px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level with custom margin renders correctly 3`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
  margin-top: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level with custom margin renders correctly 4`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
  margin-top: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level with custom margin renders correctly 5`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
  margin-right: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level with custom margin renders correctly 6`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
  margin-right: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level with custom margin renders correctly 7`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
  margin-bottom: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level with custom margin renders correctly 8`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
  margin-bottom: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level with custom margin renders correctly 9`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
  margin-left: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h1 level with custom margin renders correctly 10`] = `
.c0.c0.c0 {
  line-height: 1.2;
  font-weight: 600;
  margin-left: 16px;
}

<h1
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h1>
`;

exports[`Title h2 level renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h2 level with custom margin renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
  margin: 12px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h2 level with custom margin renders correctly 2`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
  margin: 12px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h2 level with custom margin renders correctly 3`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
  margin-top: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h2 level with custom margin renders correctly 4`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
  margin-top: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h2 level with custom margin renders correctly 5`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
  margin-right: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h2 level with custom margin renders correctly 6`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
  margin-right: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h2 level with custom margin renders correctly 7`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
  margin-bottom: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h2 level with custom margin renders correctly 8`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
  margin-bottom: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h2 level with custom margin renders correctly 9`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
  margin-left: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h2 level with custom margin renders correctly 10`] = `
.c0.c0.c0 {
  line-height: 1.25;
  font-weight: 600;
  margin-left: 16px;
}

<h2
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h2>
`;

exports[`Title h3 level renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h3 level with custom margin renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
  margin: 12px;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h3 level with custom margin renders correctly 2`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
  margin: 12px;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h3 level with custom margin renders correctly 3`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
  margin-top: 16px;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h3 level with custom margin renders correctly 4`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
  margin-top: 16px;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h3 level with custom margin renders correctly 5`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
  margin-right: 16px;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h3 level with custom margin renders correctly 6`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
  margin-right: 16px;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h3 level with custom margin renders correctly 7`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
  margin-bottom: 16px;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h3 level with custom margin renders correctly 8`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
  margin-bottom: 16px;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h3 level with custom margin renders correctly 9`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
  margin-left: 16px;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h3 level with custom margin renders correctly 10`] = `
.c0.c0.c0 {
  line-height: 36px;
  font-weight: 600;
  margin-left: 16px;
}

<h3
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h3>
`;

exports[`Title h4 level renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h4 level with custom margin renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
  margin: 12px;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h4 level with custom margin renders correctly 2`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
  margin: 12px;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h4 level with custom margin renders correctly 3`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
  margin-top: 16px;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h4 level with custom margin renders correctly 4`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
  margin-top: 16px;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h4 level with custom margin renders correctly 5`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
  margin-right: 16px;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h4 level with custom margin renders correctly 6`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
  margin-right: 16px;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h4 level with custom margin renders correctly 7`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
  margin-bottom: 16px;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h4 level with custom margin renders correctly 8`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
  margin-bottom: 16px;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h4 level with custom margin renders correctly 9`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
  margin-left: 16px;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h4 level with custom margin renders correctly 10`] = `
.c0.c0.c0 {
  line-height: 32px;
  font-weight: 600;
  margin-left: 16px;
}

<h4
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h4>
`;

exports[`Title h5 level renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h5 level with custom margin renders correctly 1`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
  margin: 12px;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h5 level with custom margin renders correctly 2`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
  margin: 12px;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h5 level with custom margin renders correctly 3`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
  margin-top: 16px;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h5 level with custom margin renders correctly 4`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
  margin-top: 16px;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h5 level with custom margin renders correctly 5`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
  margin-right: 16px;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h5 level with custom margin renders correctly 6`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
  margin-right: 16px;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h5 level with custom margin renders correctly 7`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
  margin-bottom: 16px;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h5 level with custom margin renders correctly 8`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
  margin-bottom: 16px;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h5 level with custom margin renders correctly 9`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
  margin-left: 16px;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h5 level with custom margin renders correctly 10`] = `
.c0.c0.c0 {
  line-height: 24px;
  font-weight: 600;
  margin-left: 16px;
}

<h5
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h5>
`;

exports[`Title h6 level renders correctly 1`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;

exports[`Title h6 level with custom margin renders correctly 1`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
  margin: 12px;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;

exports[`Title h6 level with custom margin renders correctly 2`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
  margin: 12px;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;

exports[`Title h6 level with custom margin renders correctly 3`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
  margin-top: 16px;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;

exports[`Title h6 level with custom margin renders correctly 4`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
  margin-top: 16px;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;

exports[`Title h6 level with custom margin renders correctly 5`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
  margin-right: 16px;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;

exports[`Title h6 level with custom margin renders correctly 6`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
  margin-right: 16px;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;

exports[`Title h6 level with custom margin renders correctly 7`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
  margin-bottom: 16px;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;

exports[`Title h6 level with custom margin renders correctly 8`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
  margin-bottom: 16px;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;

exports[`Title h6 level with custom margin renders correctly 9`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
  margin-left: 16px;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;

exports[`Title h6 level with custom margin renders correctly 10`] = `
.c0.c0.c0 {
  font-size: 16px;
  line-height: 20px;
  margin-top: 1.2em;
  margin-bottom: 0.5em;
  font-weight: 600;
  margin-left: 16px;
}

<h6
  className="rovna-ui-typography c0 rovna-ui-typography-title css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-title"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Title
</h6>
`;
